--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+datasource.url=
+datasource.username=
+datasource.password=
+datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=create-drop
